--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
 /target/classes/META-INF/MANIFEST.MF
 /target/maven-archiver/pom.properties
+pom.xml
