/announce command completed

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>net.duckycraftmc</groupId>
     <artifactId>discord</artifactId>
     <version>1.0</version>
+    <name>DuckyClubDiscordBot</name>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
