--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,11 @@
                             <archive>
                                 <manifest>
                                     <addClasspath>true</addClasspath>
-                                    <mainClass>DesktopLauncher</mainClass>
+                                    <mainClass>net.duckycraftmc.discord.Main</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
-                                <descriptorRef>wDep</descriptorRef>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
                             </descriptorRefs>
                         </configuration>
                     </execution>
